@@ -1,3 +1,8 @@
+2012-10-04  Ian Lance Taylor  <iant@google.com>
+
+	* dwarf.c: If the system header files do not declare strnlen,
+	provide our own version.
+
 2012-10-03  Ian Lance Taylor  <iant@google.com>
 
 	* dwarf.c (read_uleb128): Fix overflow test.
